<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.toasthub.appnameandlogo.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#F57C00">

        <ImageView
            android:id="@+id/app_name_pic"
            android:contentDescription="@string/app_name"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/app_name_pic" />
        <ImageView
            android:contentDescription="@string/app_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/logo_pic" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/app_name_pic"
            android:text="@string/app_catchy_phrase"
            android:textStyle="italic"
            android:textColor="#000"
            android:textAppearance="?android:textAppearanceLarge"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_username"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_sign_in"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:background="@drawable/custom_button"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_google"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#dd4b39"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_facebook"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#3b5998"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_twitter"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#4099FF"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>
